Adding constants class with several values to clean thing up a bit Moving the LoginRequest and LoginResponse to a new dto package Adding a test framework to test the code inside the activities Updating fragment login to be able to enter username and password Updating strings xml Updating base fragment to include a method to call the rest services

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -2,5 +2,8 @@
 <resources>
 
     <string name="app_name">SplitemApp</string>
+    <string name="user_name">User Name</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
 
 </resources>
