--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -2,8 +2,10 @@
 <resources>
 
     <string name="app_name">SplitemApp</string>
-    <string name="user_name">User Name</string>
-    <string name="password">Password</string>
-    <string name="login">Login</string>
+    <string name="user_name">   Username or Email</string>
+    <string name="password">   Password</string>
+    <string name="log_in">LOG IN</string>
+    <string name="sign_up_question">Don\'t have an account?</string>
+    <string name="sign_up_link">Sign up</string>
 
 </resources>
