--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -3,6 +3,7 @@
 
 	<!-- GLOBAL -->
     <string name="app_name">SplitemApp</string>
+    <string name="line_separator_description">Line Separator</string>
     
     <!-- Login Screen -->
     <string name="li_username_hint">Username or Email</string>
@@ -34,6 +35,7 @@
     <string name="cl_list_budget">Available budget</string>
     <string name="cl_list_budget_optional">optional</string>
     <string name="cl_list_members_list">Member list</string>
+    <string name="cl_list_add_people">Add more people</string>
     <string name="cl_new_list_button">Create list</string>
     <string name="cl_cancel_action">Cancel</string>
     
