--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -51,6 +51,7 @@
     
     <!-- Project Screen -->
     <string name="p_add_expense_button">Add an expense</string>
+    <string name="p_cover_image_description">Cover Image</string>
     
     <!-- Expense Screen -->
     <string name="e_title">Expense</string>
