--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="app_name">SplitemApp</string>
     <string name="line_separator_description">Line Separator</string>
     
+    <!-- ACtion Bar -->
+    <string name="ab_title">Title</string>
+    <string name="ab_done">DONE</string>
+    
     <!-- Login Screen -->
     <string name="li_username_hint">Username or Email</string>
     <string name="li_password_hint">Password</string>
@@ -35,12 +39,11 @@
     <string name="cl_title">New List</string>
     <string name="cl_list_name">List Name</string>
     <string name="cl_list_type">List Type</string>
-    <string name="cl_list_budget">Available budget</string>
+    <string name="cl_list_budget">List budget</string>
     <string name="cl_list_budget_optional">optional</string>
     <string name="cl_list_members_list">Member list</string>
     <string name="cl_list_add_people">Add more people</string>
     <string name="cl_new_list_button">Create list</string>
-    <string name="cl_cancel_action">Cancel</string>
     
     <!-- Add User Expense Screen -->
     <string name="ue_icon_description">User Expense Icon</string>
