Adding a welcome screen with a pager that selects between Login and Create Account Updating how the user expense looks like in the list Updating the database helper to include a method that returns all users in the DB together with their contact data

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="ab_title">Title</string>
     <string name="ab_done">DONE</string>
     
+    <!-- Welcome Screen -->
+    <string name="w_login">LOGIN</string>
+    <string name="w_create_account">CREATE ACCOUNT</string>
+    
     <!-- Login Screen -->
     <string name="li_username_hint">Username or Email</string>
     <string name="li_password_hint">Password</string>
