--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -40,9 +40,9 @@
     <string name="h_name">Name</string>
     <string name="h_email">E-mail</string>
     <string name="h_new_list_button">New list of expenses</string>
-    <string name="h_logout">Logout</string>
-    <string name="h_synchronize">Synchronize</string>
-    <string name="h_manage_contacts">Manage Contacts</string>
+    <string name="h_logout">LOGOUT</string>
+    <string name="h_synchronize">SYNCHRONIZE</string>
+    <string name="h_manage_contacts">MANAGE CONTACTS</string>
     
     <!-- Create List Screen -->
     <string name="cl_title">New List</string>
