--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -61,6 +61,8 @@
     <string name="ue_date_placeholder">13 10 2014</string>
     <string name="ue_currency">$</string>
     <string name="ue_amount_placeholder">30,5</string>
+    <string name="ue_fullName_placeholder">Full Name</string>
+    <string name="ue_fullAmount_placeholder">405.50</string>
     
     <!-- Project Screen -->
     <string name="p_add_expense_button">Add an expense</string>
