Adding swipe support. Still need to fix the height of the text while sliding. There is something wrong with that. Still need to add a on click handler to handle actions upon the slided option Need to improve the way the whole sliding experience works and feels to the touch. The need to double tap the row for it to go back to the original state is wrong...

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="h_avatar_description">Avatar</string>
     <string name="h_name">Name</string>
     <string name="h_email">E-mail</string>
+    <string name="h_archive_project">Archive</string>
+    <string name="h_edit_project">Edit</string>
     <string name="h_new_list_button">New list of expenses</string>
     <string name="h_logout">LOGOUT</string>
     <string name="h_synchronize">SYNCHRONIZE</string>
