Removing android swipe layout jar since now we are using it as a library Removing old project adapter Adding new Swipe Project Adapter that uses the new library Updating project item list layout to include the bottom actions Adding new icons for actions

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="h_logout">LOGOUT</string>
     <string name="h_synchronize">SYNCHRONIZE</string>
     <string name="h_manage_contacts">MANAGE CONTACTS</string>
+    <string name="h_action_edit">Edit</string>
+    <string name="h_action_remove">Remove</string>
     
     <!-- Create List Screen -->
     <string name="cl_title">New List</string>
