--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="cl_list_type">List Type</string>
     <string name="cl_list_budget">List budget</string>
     <string name="cl_list_budget_optional">optional</string>
+    <string name="cl_list_budget_value">0</string>
     <string name="cl_list_members_list">Member list</string>
     <string name="cl_list_add_people">Add more people</string>
     <string name="cl_new_list_button">Create list</string>
