--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -85,12 +85,13 @@
     <string name="e_currency">$</string>
     <string name="e_initial_expense_amount">0</string>
     
-    <!-- Add People Screen -->
-    <string name="ap_title">Add People</string>
-    <string name="ap_back_action">Back</string>
-    <string name="ap_contacts">Contacts</string>
-    <string name="ap_avatar_description">Contact Avatar</string>
-    <string name="ap_status_description">Contact Status Icon</string>
+    <!-- Project Contacts Screen -->
+    <string name="pc_title">Project Contacts</string>
+    <string name="pc_back_action">Back</string>
+    <string name="pc_contacts">Contacts</string>
+    <string name="pc_contact_fullname_placeholder">Full Name</string>
+    <string name="pc_avatar_description">Contact Avatar</string>
+    <string name="pc_status_description">Contact Status Icon</string>
     
     <!-- Manage Contacts -->
     <string name="mc_title">Manage Contacts</string>
