--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="h_manage_contacts">MANAGE CONTACTS</string>
     <string name="h_action_edit">Edit</string>
     <string name="h_action_archive">Archive</string>
+    <string name="h_empty_list_hint">You don\'t have any projects. Tap on the ADD button to start.</string>
     
     <!-- Create Project Screen -->
     <string name="cp_new_title">New List</string>
@@ -75,6 +76,7 @@
     <!-- Project Screen -->
     <string name="p_add_expense_button">Add an expense</string>
     <string name="p_cover_image_description">Cover Image</string>
+    <string name="p_empty_list_hint">You don\'t have any spendings. Tap on the ADD button to start.</string>
     
     <!-- Expense Screen -->
     <string name="e_new_title">New Expense</string>
