SPLITEMAPP-10 Adding a grey arrow key Adding methods to the base fragment to rotate row Adding code in the SingleUserExpenseAdapter to animate the row upon user tapping the row the name is in

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="p_add_expense_button">Add an expense</string>
     <string name="p_cover_image_description">Cover Image</string>
     <string name="p_empty_list_hint">You don\'t have any spendings. Tap on the ADD button to start.</string>
+    <string name="p_arrow_description">Arrow Image</string>
     
     <!-- Expense Screen -->
     <string name="e_new_title">New Expense</string>
