--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -8,6 +8,8 @@
     <!-- ACtion Bar -->
     <string name="ab_title">Title</string>
     <string name="ab_done">DONE</string>
+    <string name="ab_back_description">Back</string>
+    <string name="ab_menu_description">Menu</string>
     
     <!-- Welcome Screen -->
     <string name="w_login">LOGIN</string>
