SPLITEMAPP-38 Renaming package Updating android manifest file so that it includes information about the services Updating the sender id as the application number given by google after Setting the application in "Google Developers Console"

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -4,7 +4,7 @@
 	<!-- GLOBAL -->
     <string name="app_name">SplitemApp</string>
     <string name="line_separator_description">Line Separator</string>
-    <string name="gcm_defaultSenderId"></string>
+    <string name="gcm_defaultSenderId">66220540369</string>
     
     <!-- ACtion Bar -->
     <string name="ab_title">Title</string>
