SPLITEMAPP-46 Updating Gifts category.

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -114,6 +114,6 @@
     <string name="e_category_bills">Bills</string>
     <string name="e_category_entertainment">Entertainment</string>
     <string name="e_category_home">Home</string>
-    <string name="e_category_utilities">Utilities</string>
+    <string name="e_category_gifts">Gifts</string>
     <string name="e_category_shopping">Shopping</string>
 </resources>
