SPLITEMAPP-51 Fixing refresh process while in the project fragment Making the network error message configurable from the string.xml file

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -5,7 +5,10 @@
     <string name="app_name">SplitemApp</string>
     <string name="line_separator_description">Line Separator</string>
     
-    <!-- ACtion Bar -->
+    <!-- Messages -->
+    <string name="network_error">Check your network connection!</string>
+    
+    <!-- Action Bar -->
     <string name="ab_title">Title</string>
     <string name="ab_done">DONE</string>
     <string name="ab_back_description">Back</string>
