SPLITEMAPP-50 Setting new toast shape and layout Setting toast background color as yellow Renaming other shapes to maintain a certain naming convention

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="line_separator_description">Line Separator</string>
     
     <!-- Messages -->
-    <string name="network_error">Check your network connection!</string>
+    <string name="network_error">Check your network connection</string>
     
     <!-- Action Bar -->
     <string name="ab_title">Title</string>
