SPLITEMAPP-65 Updating bar color Updating database helper to offer a method to obtain the total amount of expenses for a particular project Updating the balance screen in general to match what its supposed to be doing Creating MonthMapper to map strings with month names Creating ExpenseGroup class to hold the drawable and amount value Adding all required strings for months

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -154,6 +154,18 @@
     <string name="b_user">USER</string>
     <string name="b_date">DATE</string>
     <string name="b_icon_description">Expense Group Icon</string>
+    <string name="b_month_january">January</string>
+    <string name="b_month_february">February</string>
+    <string name="b_month_march">March</string>
+    <string name="b_month_april">April</string>
+    <string name="b_month_may">May</string>
+    <string name="b_month_june">June</string>
+    <string name="b_month_july">July</string>
+    <string name="b_month_august">August</string>
+    <string name="b_month_september">September</string>
+    <string name="b_month_october">October</string>
+    <string name="b_month_november">November</string>
+    <string name="b_month_december">December</string>
     
     <!-- Expense Categories -->
     <string name="e_category_description">Category image</string>
