SPLITEMAPP-65 Adding new option in the project screen to display the balance (probably will change this with a new chart icon somewhere) Adding new activity to the android manifest Updating ExpenseGroupAdapter to load the recycler view appropriately Updating BalanceFragment to use the proper fragment with blue toolbar

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="p_arrow_description">Arrow Image</string>
     <string name="p_more_option_edit">Edit</string>
     <string name="p_more_option_change_cover">Change cover</string>
+    <string name="p_more_option_balance">Balance</string>
     <string name="p_more_option_archive">Archive</string>
     
     <!-- Expense Screen -->
