SPLITEMAPP-65 Adding the click feature on the expense group list Adding a SeekBar to the user mode view in the balance screen TODO: Add a textview that shows the percentage # and also set a max to it based on the number of users and the % assigned to each one. TODO: Add a textview that indicates how much money they need to pay or get back

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="ue_category_placeholder">Category</string>
     <string name="ue_date_placeholder">13 10 2014</string>
     <string name="ue_currency">$</string>
-    <string name="ue_amount_placeholder">30,5</string>
+    <string name="ue_amount_placeholder">30,5%</string>
     <string name="ue_fullName_placeholder">Full Name</string>
     <string name="ue_fullAmount_placeholder">405.50</string>
     
