SPLITEMAPP-2 Adding logo image in all sizes Adding logo to welcome fragment Adding the DS_STORE file to the ignore list

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -28,6 +28,7 @@
     <!-- Welcome Screen -->
     <string name="w_login">LOGIN</string>
     <string name="w_create_account">CREATE ACCOUNT</string>
+    <string name="w_app_logo_description">Application Logo</string>
     
     <!-- Login Screen -->
     <string name="li_username_hint">Username or Email</string>
