--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -80,6 +80,15 @@
     <string name="h_action_edit">Edit</string>
     <string name="h_action_archive">Archive</string>
     <string name="h_empty_list_hint">You don\'t have any projects. Tap on the ADD button to start.</string>
+
+    <!-- Home Screen Project Filter -->
+    <string name="hpf_filter_description">Project Filter</string>
+    <string name="hpf_title">Project Filter</string>
+    <string name="hpf_project_status">Project Status</string>
+    <string name="hpf_project_type">Project Type</string>
+    <string name="hpf_show_archived">Archived projects</string>
+    <string name="hpf_show_monthly">Monthly projects</string>
+    <string name="hpf_show_one_time">One time projects</string>
     
     <!-- Create Project Screen -->
     <string name="cp_new_title">New List</string>
