SPLITEMAPP-71 Updating fragment project filter to add the active projects Setting initial settings for project filters Updating the swipe projects adapter to manage project filters Updating the preferences manager to contina project filters Updating home fragment to contain switch elements and handle switch events

--- a/splitemapp-android/res/values/strings.xml
+++ b/splitemapp-android/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="hpf_title">Filter Projects</string>
     <string name="hpf_project_status">Project Status</string>
     <string name="hpf_project_type">Project Type</string>
+    <string name="hpf_show_active">Active projects</string>
     <string name="hpf_show_archived">Archived projects</string>
     <string name="hpf_show_monthly">Monthly projects</string>
     <string name="hpf_show_one_time">One time projects</string>
